# KQGMIP

./: .gitignore  CLAUDE.md  CLAUDE_INFO.md  ESTRUCTURA_PROPUESTA.md  PLANNING.md  README.md  exec.py  main.py  main_batch.py  pyphi_config.yml  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: streamlit_app.py
data/: README.md
data/results/: Resultados_DatosPruebas2026_1.xlsx  benchmark.csv  benchmark.xlsx  benchmark_N20A_kgeomip.csv  benchmark_core_meta.csv  benchmark_core_meta.xlsx  benchmark_results.csv  benchmark_results.xlsx  benchmark_results_FINAL.csv  benchmark_results_FINAL.xlsx  benchmark_results_N25A_clustering.csv  optimality_validation.md  optimality_validation.xlsx  resultados-not_mnt.xlsx  resultados.xlsx
data/samples/: N10B.csv  N11B.csv  N6B.csv
docs/: Criterios de Evaluacion_Documentación.md  Manual_Técnico_KQMIP.md  Manual_Usuario_KQMIP.md  Proyecto_KQMIP.md  algoritmos.md  validacion_cruzada_fase11.md
docs/manuales/: .gitignore  Makefile  Manual_Tecnico.tex  Manual_Usuario.tex  README.md  preambulo.tex
geomip_app/: requirements.txt  run.sh  streamlit_app.py
geomip_app/.streamlit/: config.toml
geomip_app/core/: comparator.py  exporter.py  loader.py  runner.py  visualizer.py
logs/: ai_agent_changelog.md
scripts/: bench_fase6.py  consolidate_results.py  fill_grid.py  fill_official_grid.py  generate_tpm.py  make_figures.py  make_interactive.py  make_viz.py  run_benchmark.py  validate.py  validate_correctness.py  validate_optimality.py  validate_vs_others.py
scripts/validation/: correctness.py  external.py  optimality.py
src/base/: application.py  sia.py
src/constants/: base.py  errors.py  grid.py  metaheuristics.py  strategies.py  tags.py
src/controllers/: manager.py
src/funcs/: accelerate.py  cost_table.py  emd.py  format.py  grid.py  k_refine.py  labels.py  metaheuristic.py  metrics.py  parallel.py  partitions.py  runner.py
src/io/: logger.py  manager.py  profiler.py
src/middlewares/: profile.py  slogger.py
src/models/: ncube.py  solution.py  (+1 more)
tests/: conftest.py  helpers.py  legacy_cost_table.py
(+87 files in other folders)
