[project]
name = "kqgmip"
version = "0.3.0"
description = "Framework IIT para la Particion de Minima Informacion (MIP) con extension a k-particiones (KGeoMIP / KQNodes)."
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "colorama>=0.4.6",
    "pyinstrument>=5.1.2",
    "pyphi>=1.2.0",
    "more-itertools>=10.0.0",
    "joblib>=1.4.0",
    "psutil>=6.0.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
emd = ["pyemd>=0.5.1"]
perf = [
    "numba>=0.65",
    "threadpoolctl>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "hypothesis>=6.100.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [".core", "data", "docs", "review", ".logs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E741", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.14"
files = ["src"]
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
exclude = ["\\.core", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "triage: tests that document known defects (QNodes suboptimal)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/controllers/strategies/phi.py", "*/__init__.py"]
